--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "styled-components": "^6.1.8",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
