feat: adding header, highlights and group card

--- a/biome.json
+++ b/biome.json
@@ -14,10 +14,7 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true,
-			"nursery": {
-				"noUnusedImports": "warn"
-			}
+			"recommended": true
 		}
 	},
 	"javascript": {
