--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "expo": "~50.0.2",
+    "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "styled-components": "^6.1.8",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "react-native-svg": "14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "^18.2.48"
+  },
+  "overrides": {
     "@types/react": "^18.2.48"
   },
   "private": true
