--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-svg": "14.1.0",
     "styled-components": "^6.1.8",
-    "typescript": "^5.3.0",
-    "react-native-svg": "14.1.0"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
